--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -16,7 +16,7 @@
                 <li><a href="#Cotizador">Cotizador</a></li>
             </ul>
         </div>
-        <div class="logo2Container" onClick="showDrawer()">
+        <div class="logo2Container" onClick="showDrawer()" id="logo2Container">
             <img src="/images/ui/logoRollo.svg">
         </div>
     </div> 
