animaciones de presentacion

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,7 +7,10 @@
     <%- include('./partials/header') %>
     <main>
         <div class="presentacion"></div>
-        <div class="presentacionTransparent"></div>
+        <div class="presentacionTransparent">
+            <h1>Trabajamos con <strong id="word">pasión</strong></h1>
+            <p>En Fernatex día a día ponemos en funcionamiento nuestra empresa con el compromiso de lograr superarnos para brindar el mejor servicio y la mas alta calidad</p>
+        </div>
         <!----- Estampados ----->
         <div class="body-container" id="body-container">
             <div class="estampadosContainer" id="Estampados">
