--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -330,14 +330,32 @@ header.sticky #drawer{
   background-position: center;
   position: fixed;
 
+
+
 }
 .presentacionTransparent{
   width: 100vw;
   height: 100vh;
   position: fixed;
   background-color: #00000044;
+  display:flex;
+  justify-content: center;
+  align-items:flex-start;
+  flex-direction: column;
+  color:white;
+  padding: 15vw 100px;
+  text-shadow: 0px 2px 6px rgb(0 0 0 / 45%);
 }
-
+.presentacionTransparent h1{
+  font-size: 4.5rem;
+  font-weight: 500;
+  
+}
+.presentacionTransparent p{
+  margin-top:30px;
+  max-width: 70%;
+  font-size: 1.5rem;
+}
 div.body-container {
   margin: 5%;
   margin-top: 88vh;
