banner text animations

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,7 +8,9 @@
     <main>
         <div class="presentacion"></div>
         <div class="presentacionTransparent">
-            <h1>Trabajamos con <strong id="word">pasión</strong></h1>
+            <h1 id="bannerText" class="">Trabajamos con 
+                    <strong id="word"></strong>
+            </h1>
             <p>En Fernatex día a día ponemos en funcionamiento nuestra empresa con el compromiso de lograr superarnos para brindar el mejor servicio y la mas alta calidad</p>
         </div>
         <!----- Estampados ----->
