--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -305,8 +305,8 @@ header.sticky #drawer{
   display: flex;
   float: right;
   border-radius:50%;
-  background: linear-gradient(164deg, rgba(157,100,81,1) 0%, rgba(215,157,138,1) 40%, rgba(142,76,55,1) 100%);
-  box-shadow: 0px 6px 10px 1px rgba(0,0,0,0.5);
+  /* background: linear-gradient(164deg, rgba(157,100,81,1) 0%, rgba(215,157,138,1) 40%, rgba(142,76,55,1) 100%); */
+  /* box-shadow: 0px 6px 10px 1px rgba(0,0,0,0.5); */
   height: 9vw;
   width: 9vw;
   justify-content: center;
@@ -347,8 +347,11 @@ header.sticky #drawer{
   text-shadow: 0px 2px 6px rgb(0 0 0 / 45%);
 }
 .presentacionTransparent h1{
+  position: relative;
   font-size: 4.5rem;
   font-weight: 500;
+  overflow: hidden;
+  padding-bottom: 10px;
   
 }
 .presentacionTransparent p{
@@ -356,6 +359,30 @@ header.sticky #drawer{
   max-width: 70%;
   font-size: 1.5rem;
 }
+.presentacionTransparent h1::after {
+  content: '';
+  position: absolute;
+  bottom:0;
+  left: 0;
+  width: 100%;
+  height: 0.1em;
+  background-color: white;
+  opacity: 0;
+  transition: opacity 300ms, transform 1500ms;
+  transform: translate3d(-100%, 0, 0);
+  margin:0 10px;
+}
+.presentacionTransparent h1.underline::after{
+  opacity: 1;
+  transform: translate3d(0, 0, 0);
+}
+.presentacionTransparent #word{
+  transition: all 1s;
+}
+.presentacionTransparent #word.transparent{
+  opacity: 0;
+}
+
 div.body-container {
   margin: 5%;
   margin-top: 88vh;
