--- a/public/stylesheets/logosMarcas.css
+++ b/public/stylesheets/logosMarcas.css
@@ -24,7 +24,11 @@
     height: 60px;
     background-color: white;
     box-shadow: 0px 2px 6px rgba(0,0,0,0.4);
-
+    transition: all 1s;
+    cursor: pointer;
+}
+.contenedor-circulos img:hover{
+    transform: scale(1.5);
 }
 
 @media all and (max-width: 1220px) {
