--- a/views/home.ejs
+++ b/views/home.ejs
@@ -17,7 +17,7 @@
         <div class="body-container" id="body-container">
             <div class="estampadosContainer" id="Estampados">
                 <div class="estampados">
-                    <img src="images/ui/up-arrow.png" id="arrowUp" onclick="enroll()">
+                    <!-- <img src="images/ui/up-arrow.png" id="arrowUp" onclick="enroll()"> -->
                     <h2>Desenrrolla nuestras ideas</h2>
                 </div>
             </div>
@@ -25,11 +25,14 @@
             <div></div>
             <!----- Inicio Carruceles ----->
 
-            <div class="Carousel">
+            <section class="Carousel">
                 
-                <img style="width: 100%;" src="images/ui/linea.png">
-                
+                <!-- <img style="width: 100%;" src="images/ui/linea.png"> -->
                 <!-- Primer carrusel -->
+                <div class="carousel-title">
+                    <!-- <span>categoria</span> -->
+                    <h2>Animales</h2>
+                </div>
                 <div class="slick-list" id="slick-list">
                     <button class="slick-arrow slick-prev" id="button-prev" data-button="button-prev" onclick="app.processingButton(event)">
                         <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="chevron-left" class="svg-inline--fa fa-chevron-left fa-w-10" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
@@ -111,6 +114,10 @@
                 <img style="width: 100%;" src="images/ui/linea.png">
                 
                 <!-- Segundo carrusel -->
+                <div class="carousel-title">
+                    <!-- <span>categoria</span> -->
+                    <h2>Para Niños</h2>
+                </div>
                 <div class="slick-list" id="slick-list">
                     <button class="slick-arrow slick-prev" id="button-prev" data-button="button-prev" onclick="app.processingButton(event)">
                         <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="chevron-left" class="svg-inline--fa fa-chevron-left fa-w-10" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
@@ -257,8 +264,11 @@
                 <img style="width: 100%;" src="images/ui/linea.png">
                 
                 <!-- Tercer carrusel -->
+                <div class="carousel-title">
+                    <!-- <span>categoria</span> -->
+                    <h2>Rayados</h2>
+                </div>
                 <div class="slick-list" id="slick-list">
-                    
                     <button class="slick-arrow slick-prev" id="button-prev" data-button="button-prev" onclick="app.processingButton(event)">
                         <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="chevron-left" class="svg-inline--fa fa-chevron-left fa-w-10" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
                             <path fill="currentColor" d="M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z"></path>
@@ -330,8 +340,9 @@
                 
                 </div>
                 <!-- Tercer carrusel -->
+                <img style="width: 100%;" src="images/ui/linea.png">
 
-            </div>
+            </section>
             <!----- FIN Carruseles ----->
 
             <div class="fondoTrianguloInvertido">
