--- a/public/stylesheets/cotizador.css
+++ b/public/stylesheets/cotizador.css
@@ -1,10 +1,10 @@
 button{
   border-radius: 3px !important;
-  background-color: hsl(15, 40%, 35%);
+  background-color: #e6b251;
   transition-duration: 0.4s;
 }
 button:hover{
-  background-color: hsl(15, 37%, 45%);
+  background-color: #997025;
 }
 
 .section{
