--- a/views/home.ejs
+++ b/views/home.ejs
@@ -14,10 +14,10 @@
             <p>En Fernatex día a día ponemos en funcionamiento nuestra empresa con el compromiso de lograr superarnos para brindar el mejor servicio y la mas alta calidad</p>
         </div>
         <!----- Estampados ----->
+        <img src="images/ui/solapa.svg" id="flapUp" onclick="enroll()">
         <div class="body-container" id="body-container">
             <div class="estampadosContainer" id="Estampados">
                 <div class="estampados">
-                    <!-- <img src="images/ui/up-arrow.png" id="arrowUp" onclick="enroll()"> -->
                     <h2>Desenrrolla nuestras ideas</h2>
                 </div>
             </div>
