--- a/views/home.ejs
+++ b/views/home.ejs
@@ -22,7 +22,6 @@
                 </div>
             </div>
             <!-----  FIN Estampados ----->
-            <div></div>
             <!----- Inicio Carruceles ----->
 
             <section class="Carousel">
@@ -111,7 +110,7 @@
                     </button>
                 </div>
 
-                <img style="width: 100%;" src="images/ui/linea.png">
+                <img style="width: 100%;" src="images/ui/linea.svg">
                 
                 <!-- Segundo carrusel -->
                 <div class="carousel-title">
@@ -261,7 +260,7 @@
                     </button>
                 </div>
 
-                <img style="width: 100%;" src="images/ui/linea.png">
+                <img style="width: 100%;" src="images/ui/linea.svg">
                 
                 <!-- Tercer carrusel -->
                 <div class="carousel-title">
@@ -340,7 +339,7 @@
                 
                 </div>
                 <!-- Tercer carrusel -->
-                <img style="width: 100%;" src="images/ui/linea.png">
+                <img style="width: 100%;" src="images/ui/linea.svg">
 
             </section>
             <!----- FIN Carruseles ----->
@@ -348,7 +347,7 @@
             <div class="fondoTrianguloInvertido">
                 <!----- About  ----->
                 <div class="aboutContainer" id="AboutUs">
-
+                    <img src="images/ui/fabrica demo.jpg" alt="" />
                     <div class="tituloAbout">
                         <h1>Acerca de Nosotros</h1>
                     </div>
@@ -358,153 +357,6 @@
                     </div>
                 </div>
                 <!----- FIN About  ----->
-
-                <!----- Carruseles OFERTAS ----->
-                <!-- <div class="ofertasContainer" id="Ofertas">
-                   
-
-                    <div class="slick-list" id="slick-list">
-                       
-                        <div class="slick-track" id="track">
-                            <div class="slick">
-                                <div>
-                                    <a href="/">
-                                        <picture>
-                                            <img src="images/estampados/animal/6.jpg" alt="Rock and Roll Hall of Fame">
-                                        </picture>
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="slick">
-                                <div>
-                                    <a href="/">
-                                        <picture>
-                                            <img src="images/estampados/animal/1.jpg" alt="Rock and Roll Hall of Fame">
-                                        </picture>
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="slick">
-                                <div>
-                                    <a href="/">
-                                        <picture>
-                                            <img src="images/estampados/animal/2.jpg" alt="Rock and Roll Hall of Fame">
-                                        </picture>
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="slick">
-                                <div>
-                                    <a href="/">
-                                        <picture>
-                                            <img src="images/estampados/animal/3.jpg" alt="Rock and Roll Hall of Fame">
-                                        </picture>
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="slick">
-                                <div>
-                                    <a href="/">
-                                        <picture>
-                                            <img src="images/estampados/animal/4.jpg" alt="Rock and Roll Hall of Fame">
-                                        </picture>
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="slick">
-                                <div>
-                                    <a href="/">
-                                        <picture>
-                                            <img src="images/estampados/animal/5.jpg" alt="Rock and Roll Hall of Fame">
-                                        </picture>
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="slick">
-                                <div>
-                                    <a href="/">
-                                        <picture>
-                                            <img src="images/estampados/animal/6.jpg" alt="Rock and Roll Hall of Fame">
-                                        </picture>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                        
-                    </div>
-                    <div class="slick-list" id="slick-list">
-                        
-                        <div class="slick-track" id="track">
-                            
-                            <div class="slick">
-                                <div>
-                                    <a href="/">
-                                        <picture>
-                                            <img src="images/estampados/animal/1.jpg" alt="Rock and Roll Hall of Fame">
-                                        </picture>
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="slick">
-                                <div>
-                                    <a href="/">
-                                        <picture>
-                                            <img src="images/estampados/animal/2.jpg" alt="Rock and Roll Hall of Fame">
-                                        </picture>
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="slick">
-                                <div>
-                                    <a href="/">
-                                        <picture>
-                                            <img src="images/estampados/animal/2.jpg" alt="Rock and Roll Hall of Fame">
-                                        </picture>
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="slick">
-                                <div>
-                                    <a href="/">
-                                        <picture>
-                                            <img src="images/estampados/animal/3.jpg" alt="Rock and Roll Hall of Fame">
-                                        </picture>
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="slick">
-                                <div>
-                                    <a href="/">
-                                        <picture>
-                                            <img src="images/estampados/animal/5.jpg" alt="Rock and Roll Hall of Fame">
-                                        </picture>
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="slick">
-                                <div>
-                                    <a href="/">
-                                        <picture>
-                                            <img src="images/estampados/animal/6.jpg" alt="Rock and Roll Hall of Fame">
-                                        </picture>
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="slick">
-                                <div>
-                                    <a href="/">
-                                        <picture>
-                                            <img src="images/estampados/animal/6.jpg" alt="Rock and Roll Hall of Fame">
-                                        </picture>
-                                    </a>
-                                </div>
-                            </div>
-                            
-                        </div>
-                        
-                    </div>
-                </div> -->
-                <!----- FIN Carruseles OFERTAS ----->
 
                 <!-----  Marcas  ----->
                 <div class="marcasContainer" id="Marcas">
@@ -578,21 +430,25 @@
                     <div class="cotizadorTitulo">
                         <h1>Recibí una cotización personalizada!</h1>
                     </div>
-                    <div class="cotizadorImage">
-                        <img src="/images/cotizador_ej.png" alt="">
-                    </div>
-
-                    <div class="cotizadorTexto">
-                        <h1>Cotizador</h1></br>
-                        <p>En nuestro cotizador podras consultar el precio de un estampado sobre la tela que eligas <strong><u>en solo 3 simples pasos:</u></strong></p>
-                        <ol>
-                            <li>Elegí el tipo de tela</li>
-                            <li>Seleciona el estampado o carga una imagen del tuyo</li>
-                            <li>Ingresa tus datos de contacto</li>
-                        </ul>
-                        </ol>
-                        <p><strong>Y listo !</strong></p>
-                        <a href="/cotizador"><button class="button2" style="vertical-align:middle">Ir a Cotizador</button></a>
+                    <div class="cotizadorContenido">
+                        <div class="cotizadorImage">
+                            <img src="/images/cotizador_ej.png" alt="">
+                        </div>
+    
+                        <article class="cotizadorTexto">
+                            <div>
+                                <h1>Cotizador</h1></br>
+                                <p>En nuestro cotizador podras consultar el precio de un estampado sobre la tela que eligas <strong><u>en solo 3 simples pasos:</u></strong></p>
+                                <ol>
+                                    <li>Elegí el tipo de tela</li>
+                                    <li>Seleciona el estampado o carga una imagen del tuyo</li>
+                                    <li>Ingresa tus datos de contacto</li>
+                                </ul>
+                                </ol>
+                                <p><strong>Y listo !</strong></p>
+                                <a href="/cotizador"><button class="button2" style="vertical-align:middle">Ir a Cotizador</button></a>
+                            </div>
+                        </article>
                     </div>
                     
 
