--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -661,7 +661,7 @@ div.body-container  h1{
 }
 
 .cotizadorTitulo h1{
-  color: #000;
+  color: #4e91e6;
   text-shadow: 0px 2px 6px rgb(0 0 0 / 40%);
 }
 .cotizadorHomeContainer .cotizadorContenido {
