--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -20,7 +20,10 @@
      <script src="../public/js/cotizador.js"></script>
      <script src="../../public/js/slider2.js"></script>
      <script src="https://kit.fontawesome.com/c838d3aca8.js" crossorigin="anonymous"></script>
-     
+     <link
+        rel="stylesheet"
+        href="https://unpkg.com/swiper@8/swiper-bundle.min.css"
+     />
      
     <title>Fernatex</title>
 </head>
