--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -10,11 +10,11 @@
 
 button{
   border-radius: 3px;
-  background-color: #e6b251;
+  background-color: #F27983;
   transition-duration: 0.4s;
 }
 button:hover{
-  background-color: #997025;
+  background-color: #D95959;
 }
 a { 
   text-decoration: none; 
@@ -28,7 +28,12 @@ a:visited {
 }
 
 
+hr{
+  display: block; height: 1px;
+    border: 0; border-top: 1px solid #F27983;
+    margin: 1em 5px; padding: 0;
 
+}
 
 
 
@@ -157,7 +162,7 @@ header.sticky{
   width: 100%;
   z-index: 10001;
   height: 75px;
-  background-color: #e6b251;
+  background-color: #F27983;
   transition: all 0.5s ease-in;
   box-shadow: 0 3px 12px rgb(0 0 0 / 40%);
 }
@@ -227,7 +232,7 @@ header.sticky .logo2Container img{
 
 #drawer ul {
   list-style: none;
-  color: #997025;
+  color: #D95959;
 }
 #drawer ul li{
   margin: 20px 0;
@@ -240,7 +245,7 @@ header.sticky .logo2Container img{
 }
 #drawer ul li a:hover{
   cursor: pointer;
-  color: #997025;
+  color: #D95959;
   border-bottom: thin dashed;
 }
 
@@ -294,12 +299,12 @@ header.sticky #drawer{
 .menu ul li a:hover {
   cursor: pointer;
   border-bottom: thin dashed;
-  color: #e6b251;
+  color: #F27983;
 }
 header.sticky .menu ul li a:hover {
   cursor: pointer;
   border-bottom: thin dashed;
-  color: #997025;
+  color: #0D0D0D;
 }
 
 .logo2Container{
@@ -325,12 +330,29 @@ header.sticky .menu ul li a:hover {
 .presentacion{
   width: 100vw;
   height: 100vh;
-  background-image: url(../images/ui/fabrica\ demo.jpg);
+  background-image: url(../images/fotosfabrica/deLaFabrica.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
   position: fixed;
+  transition: background 1s linear;
+  animation: slide 10s infinite;
 }
+
+
+@keyframes slide {
+  0%{
+    background-image:url(../images/fotosfabrica/deLaFabrica1.jpg)
+  }
+  33%{
+    background-image:url(../images/fotosfabrica/deLaFabrica2.jpg)    
+  }
+  67%{
+    background-image:url(../images/fotosfabrica/deLaFabrica.jpg)    
+  }
+
+}
+
 .presentacionTransparent{
   width: 100vw;
   height: 100vh;
@@ -341,7 +363,7 @@ header.sticky .menu ul li a:hover {
   align-items:flex-start;
   flex-direction: column;
   color:white;
-  padding: 15vw 100px;
+  padding: 10vw 100px;
   text-shadow: 0px 2px 6px rgb(0 0 0 / 45%);
 }
 .presentacionTransparent h1{
@@ -356,6 +378,7 @@ header.sticky .menu ul li a:hover {
   margin-top:30px;
   max-width: 70%;
   font-size: 1.8rem;
+
 }
 .presentacionTransparent h1::after {
   content: '';
@@ -376,6 +399,8 @@ header.sticky .menu ul li a:hover {
 }
 .presentacionTransparent #word{
   transition: all 1s;
+  color : #0D0D0D;
+  text-shadow: 0 3px 2px black;
 }
 .presentacionTransparent #word.transparent{
   opacity: 0;
@@ -481,7 +506,7 @@ div.body-container  h1{
   font-weight: 700;
   letter-spacing: 4px;
   text-shadow: 0px 2px 3.5px #000000aa;
-  color: #e6b251;
+  color: #F27983;
   margin-bottom: 30px;
 }
 /* ---- Fondos ---- */
@@ -497,8 +522,7 @@ div.body-container  h1{
 
 .titulo-marcas{
   text-align: center;
-  color: #e6b251;
-  background: #4e91e6;
+  color: #F27983;
   padding-top:20px;
   text-shadow: 0px 2px 6px rgba(0,0,0,0.4);
 }
@@ -521,27 +545,55 @@ div.body-container  h1{
 .aboutContainer{
   box-sizing: border-box;
   margin-top: 70px;
-  padding: 40px 70px;
-  height:30vw;
+  padding: 40px 30px;
+  height:40vw;
   line-height:2;
   text-align: center;
   position: relative;
+  display: flex;
+  flex-direction: row;
+  justify-content:space-around;
+  align-items: center;
+}
+.aboutContainer .aboutText{
+  padding: 0px 15px;
+}
+.aboutContainer .imagesContainer{
+  width: 40vw;
+  height: 100%;
+}
 
+.swiper {
+  margin: 0 30px;
+  width: 80%;
+  height: 100%;
+}
+.swiper-slide {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 5px;
+  transition: 1s linear;
 }
 .aboutContainer img{
   width: 100%;
   height: 100%;
-  position: absolute;
-  left: 0px;
-  top: 0px;
-  z-index: 0;
-  filter: blur(3px) grayscale(20%) brightness(80%);
+  border-radius: 5px;
+  transition: 1s linear;
+
+}
+/* .aboutContainer img{
+  width: 850px;
+  height: 100%;
+  position: relative;
+  filter: blur(3px) grayscale(20%) brightness(80%); 
   transition: all 0.8s;
 }
+
 .aboutContainer:hover img
 {
   filter: none;
-}
+} */
 
 .aboutContainer p, .aboutContainer h1{
   text-shadow: 0px 2px 6px rgb(0 0 0 / 40%);
@@ -549,14 +601,14 @@ div.body-container  h1{
   position: relative;
   transition: all 0.5s;
 }
-.aboutContainer:hover p, .aboutContainer:hover h1{
-  opacity: 0;
-}
+
 .aboutContainer p{
-  color:#e6b251;
+  color:#0d0d0d;
+  font-size:20px !important;
 }
 .aboutContainer h1{
-  color: #e6b251;
+  color: #F27983;
+  font-size:4rem !important;
 }
 #fondoTriangulo{
   /* background: url(../images/ui/Triangulo.png) no-repeat transparent; */
@@ -594,7 +646,7 @@ div.body-container  h1{
 .tituloNewsletter {
   text-align: center;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  color:#e6b251;
+  color:#F27983;
 }
 .tituloNewsletter h1{
   text-shadow: 0px 2px 6px rgb(0 0 0 / 40%);
@@ -602,7 +654,7 @@ div.body-container  h1{
 
 .newsletterBox{
   display: flex;
-  color:#e6b251;
+  color:#F27983;
   font-size:28px;
   font-weight:600;
   flex-direction: column;
@@ -824,7 +876,7 @@ div.body-container  h1{
 
   .cotizadorTitulo h1{
     display: block;
-    color: #997025;
+    color: #D95959;
     text-align: center;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     text-shadow: 0px 2px 6px rgb(0 0 0 / 40%);
