--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -646,7 +646,7 @@ div.body-container  h1{
 .tituloNewsletter {
   text-align: center;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  color:#F27983;
+  color:#fff;
 }
 .tituloNewsletter h1{
   text-shadow: 0px 2px 6px rgb(0 0 0 / 40%);
@@ -713,7 +713,7 @@ div.body-container  h1{
 }
 
 .cotizadorTitulo h1{
-  color: #4e91e6;
+  color: #7B77F2;
   text-shadow: 0px 2px 6px rgb(0 0 0 / 40%);
 }
 .cotizadorHomeContainer .cotizadorContenido {
@@ -737,7 +737,7 @@ div.body-container  h1{
   padding: 5px;
   padding-left: 15px;
   text-align: center;
-  background: #4e91e6;
+  background: #7B77F2;
   border-radius: 0 25px 25px 0;
   box-shadow: 0 0px 4px #8b8b8b80 inset;
   z-index: 0;
