--- a/views/home.ejs
+++ b/views/home.ejs
@@ -28,6 +28,7 @@
                 
                 <!-- <img style="width: 100%;" src="images/ui/linea.png"> -->
                 <!-- Primer carrusel -->
+                <h1>Nuestros Estampados</h1>
                 <div class="carousel-categories">
                     <!-- <span>categoria</span> -->
                     <h2 onclick="ChangeSlickCategorie('Animales')" id="AnimalesCatBtn" class="clicked">Animales</h2>
@@ -51,7 +52,7 @@
                     </button>
                 </div>
 
-                <img style="width: 100%;" src="images/ui/linea.svg">
+                <img class="linea" src="images/ui/linea.svg">
 
             </section>
             <!----- FIN Carruseles ----->
@@ -90,11 +91,11 @@
                     </div>
                 </div>
                 <!----- FIN About  ----->
-                <hr>
+                <img class="linea" src="images/ui/linea.svg">
                 <!-----  Marcas  ----->
                 <div class="marcasContainer" id="Marcas">
                     <div class="titulo-marcas">
-                        <h1>MARCAS CON LAS QUE TRABAJAMOS</h1>
+                        <h2>MARCAS CON LAS QUE TRABAJAMOS</h2>
                     </div>
                     <div class='contenedor-circulos'>
                         <li>
