--- a/public/stylesheets/carruseles.css
+++ b/public/stylesheets/carruseles.css
@@ -3,10 +3,10 @@
 .Carousel{
   width: 100%;
   margin: 0%;
+  margin-top: 5%;
   text-align: center;
 }
-.Carousel h2{
-  font-size: 26px;
+.Carousel h2, .Carousel h1{
   line-height: 30px;
   padding: 10px 20px;
   margin-bottom: 24px;
@@ -14,6 +14,13 @@
   text-transform: uppercase;
   letter-spacing: 10px;
   text-align: center;
+  color: #F26363;
+}
+.Carousel h1{
+  text-shadow: 0px 2px 6px rgb(0 0 0 / 40%);
+}
+.Carousel h2{
+  font-size: 26px;
 }
 .carousel-categories{
   width:100%;
@@ -29,9 +36,6 @@
   width: 100%;
 }
 .carousel-categories h2 {
-  color: #F26363;
-  background-color: #89CCE9;
-  background-color: #A739E6;
   background-color: #fff;
   border-radius:10px;
   margin:10px 20px;
