--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -27,7 +27,10 @@ a:visited {
   position: inherit;
 }
 
-
+.linea{
+  width: 98%;
+  margin: 0px 10px;
+}
 hr{
   display: block; height: 1px;
     border: 0; border-top: 1px solid #F27983;
@@ -35,7 +38,9 @@ hr{
 
 }
 
-
+h2{
+  font-size: 45px;
+}
 
 
 /* ---- Iconos Redes Sociales ---- */
@@ -408,12 +413,12 @@ header.sticky .menu ul li a:hover {
 
 div.body-container {
   margin: 5%;
-  margin-top: 80vh;
+  margin-top: 85vh;
   margin-bottom: 3vh;
   position: absolute;
   width: 90%;
   border-radius:5px;
-  box-shadow: 0px 2px 18px 1px rgba(0,0,0,0.59);
+  box-shadow: 0px -3px 8px 2px rgba(0,0,0,0.65);
   background: url('../images/ui/telar4.jpg') no-repeat;
   background-size: cover;
   background-position: center;
@@ -451,7 +456,7 @@ div.body-container  h1{
   height: 95px;
   position: absolute;
   left: 47%;
-  bottom: 160px;
+  bottom: 110px;
   z-index: 0;
   cursor: pointer;
   filter: drop-shadow(0 -1px 4px rgb(0 0 0 / 65%));
@@ -463,42 +468,41 @@ div.body-container  h1{
 }
 #flapUp:hover{
   animation: none;
-  bottom: 175px;
+  bottom: 120px;
 }
 @keyframes moveUpDown {
   0%{
-    bottom: 160px;
+    bottom: 110px;
   }
   10%{
-    bottom: 162px;
+    bottom: 112px;
   }
   20%{
-    bottom: 164px;
+    bottom: 114px;
   }
   40%{
-    bottom: 166px;
+    bottom: 116px;
   }
   50%{
-    bottom: 168px;
+    bottom: 118px;
   }
   65%{
-    bottom: 166px;
+    bottom: 116px;
   }
   75%{
-    bottom: 164px;
+    bottom: 114px;
   }
   85%{
-    bottom: 162px;
+    bottom: 112px;
   }
   100%{
-    bottom: 160px;
+    bottom: 110px;
   }
 
 }
 .estampados h2{
   padding: 15px 0;
   padding-bottom: 3px;
-  font-size: 45px;
   text-transform: uppercase;
   width: 50%;
   margin: 0 auto;
@@ -705,7 +709,7 @@ div.body-container  h1{
   padding: 40px;
   padding-left: 30px;
   padding-right: 50px;
-  height: 725px;
+  height: 750px;
   line-height: 2;
   color: white;
   border-radius: 15px;
@@ -730,18 +734,18 @@ div.body-container  h1{
   border-radius: 25px;
   box-shadow: 0 3px 4px rgb(0 0 0 / 50%);
   width:45vw;
-  height:55vh;
+  height:60vh;
 }
 
 .cotizadorTexto{
   padding: 5px;
-  padding-left: 15px;
+  padding-left: 20px;
   text-align: center;
   background: #7B77F2;
   border-radius: 0 25px 25px 0;
   box-shadow: 0 0px 4px #8b8b8b80 inset;
   z-index: 0;
-  margin-left: -10px;
+  margin-left: -16px;
 }
 .cotizadorTexto div{
   border: 4px dashed #fff;
