--- a/views/home.ejs
+++ b/views/home.ejs
@@ -28,7 +28,7 @@
                 
                 <!-- <img style="width: 100%;" src="images/ui/linea.png"> -->
                 <!-- Primer carrusel -->
-                <h1>Nuestros Estampados</h1>
+                <h3>Nuestros Estampados</h3>
                 <div class="carousel-categories">
                     <!-- <span>categoria</span> -->
                     <h2 onclick="ChangeSlickCategorie('Animales')" id="AnimalesCatBtn" class="clicked">Animales</h2>
@@ -143,17 +143,20 @@
             </div>
             <div id="fondoTriangulo">
                 <!----- Newsletter  ----->
-                <div class="newsletterContainer" id="Contacto">
-                    <div class="tituloNewsletter">
-                        <h1>RECIBE LAS ÚLTIMAS NOVEDADES DE FERNATEX!</h1>
-                    </div>
 
-                    <div class="newsletterBox">
-                        <form action="action" method="POST">
-                            <label>Dejanos tu email</label>
-                            <input type="text" name="email">
-                            <button type="submit" class="button2" style="vertical-align:middle">Enviar</button>
-                        </form>
+                <div class="newsletterContainer" id="Contacto">
+                    <div id="backgroudTransparent">
+                        <div class="tituloNewsletter">
+                            <h1>RECIBE LAS ÚLTIMAS NOVEDADES DE FERNATEX!</h1>
+                        </div>
+    
+                        <div class="newsletterBox">
+                            <form action="action" method="POST">
+                                <label>Dejanos tu email</label>
+                                <input type="text" name="email">
+                                <button type="submit" class="button2" style="vertical-align:middle">Enviar</button>
+                            </form>
+                        </div>
                     </div>
                 </div>
                 <!----- FIN Newsletter  ----->
