--- a/views/home.ejs
+++ b/views/home.ejs
@@ -156,6 +156,20 @@
                                 <input type="text" name="email">
                                 <button type="submit" class="button2" style="vertical-align:middle">Enviar</button>
                             </form>
+                            <div class="socialBox">
+                                <div class="iconsContainer">
+                                    <li class="icon whatsapp">
+                                        <span><i class="fa fa-whatsapp" ></i></span>
+                                    </li>
+                                    <li class="icon facebook">
+                                        <span><i class="fab fa-facebook-f" ></i></span>
+                                    </li>
+                                    <li class="icon instagram">
+                                        <span><i class="fa fa-instagram" ></i></span>
+                                    </li>
+                                    
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
