--- a/public/stylesheets/carruseles.css
+++ b/public/stylesheets/carruseles.css
@@ -6,7 +6,7 @@
   margin-top: 5%;
   text-align: center;
 }
-.Carousel h2, .Carousel h1{
+.Carousel h2, .Carousel h3{
   line-height: 30px;
   padding: 10px 20px;
   margin-bottom: 24px;
@@ -14,12 +14,13 @@
   text-transform: uppercase;
   letter-spacing: 10px;
   text-align: center;
-  color: #F26363;
 }
-.Carousel h1{
+.Carousel h3{
   text-shadow: 0px 2px 6px rgb(0 0 0 / 40%);
+  letter-spacing: 2px;
 }
 .Carousel h2{
+  color: #F26363;
   font-size: 26px;
 }
 .carousel-categories{
