--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -338,7 +338,6 @@ header.sticky .menu ul li a:hover {
 .presentacion{
   width: 100vw;
   height: 100vh;
-  background-image: url(../images/fotosfabrica/deLaFabrica.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -357,6 +356,9 @@ header.sticky .menu ul li a:hover {
   }
   67%{
     background-image:url(../images/fotosfabrica/deLaFabrica.jpg)    
+  }
+  100%{
+    background-image:url(../images/fotosfabrica/deLaFabrica1.jpg)    
   }
 
 }
@@ -422,7 +424,7 @@ div.body-container {
   width: 90%;
   border-radius:5px;
   box-shadow: 0px -3px 8px 2px rgba(0,0,0,0.65);
-  background: url('../images/ui/telar4.jpg') no-repeat;
+  background: url('../images/ui/telar7.jpg') no-repeat;
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
@@ -610,7 +612,7 @@ div.body-container  h1{
 }
 
 .aboutContainer p{
-  color:#0d0d0d;
+  color:#fff;
   font-size:18px !important;
 }
 .aboutContainer h1{
