--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,5 +1,7 @@
 <div id="greyArea"></div>
-
+<div id="headerTop">
+    <span>011 4696-8156</span>
+</div>
 <header id="header"> 
 
     <div class="menuNavegacion">
