--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -166,7 +166,7 @@ header {
 header.sticky{
 
   position: fixed;
-  top: 0;
+  top: 40px;
   width: 100%;
   z-index: 10001;
   height: 75px;
@@ -332,6 +332,20 @@ header.sticky .menu ul li a:hover {
   margin-top: 10px;
   width:8vw;
   height:8vw;
+}
+
+#headerTop{
+  background-color: #9CA4A6;
+  color: #F27983;
+  height: 40px;
+  width: 100vw;
+  z-index: 1;
+  display:none;
+}
+
+#headerTop.sticky{
+  display: flex;
+  position: fixed;
 }
 /* ---- Container principal ---- */
 
@@ -736,7 +750,7 @@ div.body-container  h1{
 }
 
 .cotizadorTitulo h1{
-  color: #7B77F2;
+  color: #fff;
   text-shadow: 0px 2px 6px rgb(0 0 0 / 50%);
 }
 .cotizadorHomeContainer .cotizadorContenido {
